app/assets/stylesheets/modules/browse-embed.css.scss
.callnumber a.collapsed{
  @extend .btn;
  @extend .btn-default;
}
.callnumber a{
  @extend .btn;
  @extend .btn-primary;
}
.callnumber a:after{
  content: " \f0d7";
	font-family: FontAwesome;
}
.callnumber a.collapsed:after{
  content: " \f0da";
  font-family: FontAwesome;
}

.embed-callnumber-browse-container{
  position: relative;
  height: 430px;
  overflow: hidden;
  margin-top:15px;
  padding-top: 17px;
  margin-left:30px;
  margin-right: 30px;
  border: 2px solid $panel-default-border;
  .embedded-items{
    width: 20000px;
    height: 430px;
  }
  .gallery {
    position: relative;

    .end-refresh{
      position: relative;
      float: left;
      display: inline;
      top: 170px;
      bottom: 150px;
      left: 500px;
    }
    .gallery-document .browse-link a{
      font-size: $font-size-h3;
      display: inline-block;
      position: relative;
      top: 150px;
      @extend .lead;
      @extend .text-center;
    }
    .gallery-document .browse-link a:after{
      content: " \f0a5";
      font-family: FontAwesome;
    }
    .gallery-document:last-child .browse-link a:after{
      content: " \f0a4";
      font-family: FontAwesome;
    }
  }
}

.embed-browse-control{
  @extend .carousel-control;
  top: 0px;
  bottom: 0px;
  width: 5%;


}

